remove hello router, finish todo router, cleanup
