# lib/model/src/entity.rs
@@ -1,9 +1,11 @@
 // region:    module imports and declarations
 
 // external crates
+use axum::Json;
 use serde::{de::DeserializeOwned, Serialize};
 use serde_valid::Validate;
 use sqlx::{mysql::MySqlRow, FromRow};
+use std::future::Future;
 
 // internal imports
 use super::{Error, ModelManager, Result};
@@ -22,38 +24,43 @@ where
 {
     const TABLE: &'static str;
 
-    async fn get_by_id(mm: ModelManager, id: u64) -> Result<E> {
-        let db = mm.db();
+    fn get_by_id(mm: ModelManager, id: u64) -> impl Future<Output = Result<E>> + Send {
+        async move {
+            let db = mm.db();
 
-        let sql = format!("SELECT * FROM {} WHERE id = ?", Self::TABLE);
-        let entity: E = sqlx::query_as(&sql)
-            .bind(id)
-            .fetch_optional(db)
-            .await?
-            .ok_or(Error::EntityNotFound(Self::TABLE, id))?;
-
-        Ok(entity)
+            let sql = format!("SELECT * FROM {} WHERE id = ?", Self::TABLE);
+            let entity: E = sqlx::query_as(&sql)
+                .bind(id)
+                .fetch_optional(db)
+                .await?
+                .ok_or(Error::EntityNotFound(Self::TABLE, id))?;
+            Ok(entity)
+        }
     }
 
-    async fn list(mm: ModelManager) -> Result<Vec<E>> {
-        let db = mm.db();
+    fn list(mm: ModelManager) -> impl Future<Output = Result<Json<Vec<E>>>> + Send {
+        async move {
+            let db = mm.db();
 
-        let sql = format!("SELECT * FROM {}", Self::TABLE);
-        let entities: Vec<E> = sqlx::query_as(&sql).fetch_all(db).await?;
+            let sql = format!("SELECT * FROM {}", Self::TABLE);
+            let entities: Vec<E> = sqlx::query_as(&sql).fetch_all(db).await?;
 
-        Ok(entities)
+            Ok(Json(entities))
+        }
     }
 
-    async fn create(mm: ModelManager, data: C) -> Result<E>;
-    async fn update(mm: ModelManager, id: u64, data: U) -> Result<E>;
+    fn create(mm: ModelManager, data: C) -> impl Future<Output = Result<E>> + Send;
+    fn update(mm: ModelManager, id: u64, data: U) -> impl Future<Output = Result<E>> + Send;
 
-    async fn delete(mm: ModelManager, id: u64) -> Result<u64> {
-        let db = mm.db();
+    fn delete(mm: ModelManager, id: u64) -> impl Future<Output = Result<u64>> + Send {
+        async move {
+            let db = mm.db();
 
-        let sql = format!("DELETE FROM {} WHERE id = ?", Self::TABLE);
-        let result = sqlx::query(&sql).bind(id).execute(db).await?;
+            let sql = format!("DELETE FROM {} WHERE id = ?", Self::TABLE);
+            let result = sqlx::query(&sql).bind(id).execute(db).await?;
 
-        Ok(result.rows_affected())
+            Ok(result.rows_affected())
+        }
     }
 }
 
